[package]
name = "smpl_jwt"
version = "0.5.0"
authors = ["Drazen Urch <github@drazenur.ch>"]
description = "Very simple JWT generation lib."
repository = "https://github.com/durch/rust-jwt"
readme = "README.md"
keywords = ["JWT"]
license = "MIT"
documentation = "https://durch.github.io/rust-jwt"
edition = "2018"

[dependencies]
base64 = "0.12"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simpl = "0.1"
